* Added Raycast feature when physics is enabled (+wrappers in body & object modules)
* Dynamic objects can now have parents and get the cumulated result move from parents + physics simulation!
* Physics simulation is back on main clock to provide a more robust game loop
* Fixed FixedRotation property to use Box2D feature instead of orx's hacked one
* Fixed orxFRAME child calculation when using anisotropic scale on parent
* Fixed home render plugin camera rotation when the camera has a parent object
* Removed AutoDelete property for spawners
* Added orxObject_GetChild() / orxObject_GetSibling() for querying dependencies (for objects created through config's ChildList property only)
* Fixed config block value incorrectly saved by orxConfig_Save()
* Config section inheritance can now easily be modified on-the-fly, at runtime (orxConfig_SetParent())
* Added 'screen' keyword for ShaderList properties
* Optimized shader lists processing when rendering objects & viewports
* Fixed tutorial #5 (viewport) jerkyness
* Sets default gravity to none in Box2D physics plugin
* Fixed use of AutoScroll/DepthScale with objects using bodies
* Changed tutorial #11 (spawner/shader) shader code
* Added orxDisplay_GetVideoModeCounter() / orxDisplay_GetVideoMode() / orxDisplay_SetVideoMode() & orxDisplay_IsVideoModeAvailable() (+SFML implementations)
* Renamed orxInput_GetBoundInputNumber() to orxInput_GetBoundInputCounter()
* Renamed orxStructure_GetNumber() to orxStructure_GetCounter()
* orxSystem module is now part of core (external library independent) and not a plugin anymore (+updated all configurations)
* When querying screen texture size, the latest display size will always be used
* Updated bounce demo to be able to change resolution on the fly (F1/F2) + ToggleFullScreen on F3
* Added orx_WinExecute() helper for console-less windows application
* Added __orxWII__ platform define for future work

orx 1.0 final
-----
* Added fully featured localization module (orxLocale)