@@ -144,6 +144,8 @@ typedef struct __orxPHYSICS_EVENT_PAYLOAD_t
 {
   orxVECTOR vPosition;                    /**< Contact position : 12 */
   orxVECTOR vNormal;                      /**< Contact normal : 24 */
+  orxSTRING zSenderPartName;              /**< Sender part name : 28 */
+  orxSTRING zRecipientPartName;           /**< Recipient part name : 32 */
 
 } orxPHYSICS_EVENT_PAYLOAD;
 
