@@ -295,6 +295,10 @@ Here is a list of all struct and union fields with links to the structures/union
 : <a class="el" href="structorx_f_i_l_e_s_y_s_t_e_m___i_n_f_o.html#fd8a1c2f13f534345722678add5da100">orxFILESYSTEM_INFO</a>
 <li>zPattern
 : <a class="el" href="structorx_f_i_l_e_s_y_s_t_e_m___i_n_f_o.html#fa4f1b3dab62d2e73e462860752b81bc">orxFILESYSTEM_INFO</a>
+<li>zRecipientPartName
+: <a class="el" href="structorx_p_h_y_s_i_c_s___e_v_e_n_t___p_a_y_l_o_a_d.html#7947afe96e33302bf75f6899ff026abe">orxPHYSICS_EVENT_PAYLOAD</a>
+<li>zSenderPartName
+: <a class="el" href="structorx_p_h_y_s_i_c_s___e_v_e_n_t___p_a_y_l_o_a_d.html#f051771150344179133c964f22e4231d">orxPHYSICS_EVENT_PAYLOAD</a>
 <li>zSetName
 : <a class="el" href="structorx_i_n_p_u_t___e_v_e_n_t___p_a_y_l_o_a_d.html#bbfecb8391f5d7988e5fa5b87c5da266">orxINPUT_EVENT_PAYLOAD</a>
 <li>zShaderName
