@@ -236,6 +236,8 @@
 : <a class="el" href="group__orx_body.html#g1a492f7be69dba98bb266af4209f0fc1">orxBody.h</a>
 <li>orxBody_GetPart()
 : <a class="el" href="group__orx_body.html#g3ea144b674df198712083f8da2873656">orxBody.h</a>
+<li>orxBody_GetPartName()
+: <a class="el" href="group__orx_body.html#g2366cc8e81f4d7bbc3c762c8d237c6b4">orxBody.h</a>
 <li>orxBody_GetPartTemplate()
 : <a class="el" href="group__orx_body.html#g5bdef4fd330ef7204b588d4824a8edfe">orxBody.h</a>
 <li>orxBody_GetPosition()
