@@ -49,6 +49,9 @@
 <tr><td class="memItemLeft" nowrap align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_physics.html#gd6ca00ed200d20d87023b977ea980526">orxPHYSICS_BODY_PART</a> <br>
 *orxFASTCALL&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_body.html#g3ea144b674df198712083f8da2873656">orxBody_GetPart</a> (const <a class="el" href="group__orx_body.html#gb6996c99e713c65c10268dbcbdacbc4a">orxBODY</a> *_pstBody, orxU32 _u32Index)</td></tr>
 
+<tr><td class="memItemLeft" nowrap align="right" valign="top">orxDLLAPI const orxSTRING <br>
+orxFASTCALL&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_body.html#g2366cc8e81f4d7bbc3c762c8d237c6b4">orxBody_GetPartName</a> (<a class="el" href="group__orx_body.html#gb6996c99e713c65c10268dbcbdacbc4a">orxBODY</a> *_pstBody, orxU32 _u32Index)</td></tr>
+
 <tr><td class="memItemLeft" nowrap align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_type.html#g18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_body.html#g5334410028c4ea9da0ae8df63d95bf00">orxBody_RemovePart</a> (<a class="el" href="group__orx_body.html#gb6996c99e713c65c10268dbcbdacbc4a">orxBODY</a> *_pstBody, orxU32 _u32Index)</td></tr>
 
 <tr><td class="memItemLeft" nowrap align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_type.html#g18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_body.html#g1aba9dca0a17263ab7c9bc014bbaf939">orxBody_SetTemplate</a> (const <a class="el" href="structorx_b_o_d_y___d_e_f.html">orxBODY_DEF</a> *_pstBodyTemplate)</td></tr>
@@ -612,6 +615,42 @@ Gets a body part <dl compact><dt><b>Parameters:</b></dt><dd>
   </table>
 </dl>
 <dl class="return" compact><dt><b>Returns:</b></dt><dd>orxPHYSICS_BODY_PART / orxNULL </dd></dl>
+
+</div>
+</div><p>
+<a class="anchor" name="g2366cc8e81f4d7bbc3c762c8d237c6b4"></a><!-- doxytag: member="orxBody.h::orxBody_GetPartName" ref="g2366cc8e81f4d7bbc3c762c8d237c6b4" args="(orxBODY *_pstBody, orxU32 _u32Index)" -->
+<div class="memitem">
+<div class="memproto">
+      <table class="memname">
+        <tr>
+          <td class="memname">orxDLLAPI const orxSTRING orxFASTCALL orxBody_GetPartName           </td>
+          <td>(</td>
+          <td class="paramtype"><a class="el" href="group__orx_body.html#gb6996c99e713c65c10268dbcbdacbc4a">orxBODY</a> *&nbsp;</td>
+          <td class="paramname"> <em>_pstBody</em>, </td>
+        </tr>
+        <tr>
+          <td class="paramkey"></td>
+          <td></td>
+          <td class="paramtype">orxU32&nbsp;</td>
+          <td class="paramname"> <em>_u32Index</em></td><td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>)</td>
+          <td></td><td></td><td></td>
+        </tr>
+      </table>
+</div>
+<div class="memdoc">
+
+<p>
+Gets a body part name <dl compact><dt><b>Parameters:</b></dt><dd>
+  <table border="0" cellspacing="2" cellpadding="0">
+    <tr><td valign="top"><tt>[in]</tt>&nbsp;</td><td valign="top"><em>_pstBody</em>&nbsp;</td><td>Concerned body </td></tr>
+    <tr><td valign="top"><tt>[in]</tt>&nbsp;</td><td valign="top"><em>_u32Index</em>&nbsp;</td><td>Part index (should be less than orxBODY_KU32_DATA_MAX_NUMBER) </td></tr>
+  </table>
+</dl>
+<dl class="return" compact><dt><b>Returns:</b></dt><dd>orxSTRING / orxNULL </dd></dl>
 
 </div>
 </div><p>
