@@ -52,6 +52,9 @@
 <tr><td class="memItemLeft" nowrap align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_physics.html#gd6ca00ed200d20d87023b977ea980526">orxPHYSICS_BODY_PART</a> <br>
 *orxFASTCALL&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_body.html#g3ea144b674df198712083f8da2873656">orxBody_GetPart</a> (const <a class="el" href="group__orx_body.html#gb6996c99e713c65c10268dbcbdacbc4a">orxBODY</a> *_pstBody, orxU32 _u32Index)</td></tr>
 
+<tr><td class="memItemLeft" nowrap align="right" valign="top">orxDLLAPI const orxSTRING <br>
+orxFASTCALL&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_body.html#g2366cc8e81f4d7bbc3c762c8d237c6b4">orxBody_GetPartName</a> (<a class="el" href="group__orx_body.html#gb6996c99e713c65c10268dbcbdacbc4a">orxBODY</a> *_pstBody, orxU32 _u32Index)</td></tr>
+
 <tr><td class="memItemLeft" nowrap align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_type.html#g18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_body.html#g5334410028c4ea9da0ae8df63d95bf00">orxBody_RemovePart</a> (<a class="el" href="group__orx_body.html#gb6996c99e713c65c10268dbcbdacbc4a">orxBODY</a> *_pstBody, orxU32 _u32Index)</td></tr>
 
 <tr><td class="memItemLeft" nowrap align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_type.html#g18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_body.html#g1aba9dca0a17263ab7c9bc014bbaf939">orxBody_SetTemplate</a> (const <a class="el" href="structorx_b_o_d_y___d_e_f.html">orxBODY_DEF</a> *_pstBodyTemplate)</td></tr>
