@@ -36,6 +36,10 @@
 
 <tr><td class="memItemLeft" nowrap align="right" valign="top"><a class="el" href="structorx_v_e_c_t_o_r.html">orxVECTOR</a>&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="structorx_p_h_y_s_i_c_s___e_v_e_n_t___p_a_y_l_o_a_d.html#30b90f174addea50ca06098923194ea4">vNormal</a></td></tr>
 
+<tr><td class="memItemLeft" nowrap align="right" valign="top">orxSTRING&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="structorx_p_h_y_s_i_c_s___e_v_e_n_t___p_a_y_l_o_a_d.html#f051771150344179133c964f22e4231d">zSenderPartName</a></td></tr>
+
+<tr><td class="memItemLeft" nowrap align="right" valign="top">orxSTRING&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="structorx_p_h_y_s_i_c_s___e_v_e_n_t___p_a_y_l_o_a_d.html#7947afe96e33302bf75f6899ff026abe">zRecipientPartName</a></td></tr>
+
 </table>
 <hr><a name="_details"></a><h2>Detailed Description</h2>
 Contact event payload <hr><h2>Field Documentation</h2>
@@ -67,6 +71,36 @@ Contact position : 12
 
 <p>
 Contact normal : 24 
+</div>
+</div><p>
+<a class="anchor" name="f051771150344179133c964f22e4231d"></a><!-- doxytag: member="orxPHYSICS_EVENT_PAYLOAD::zSenderPartName" ref="f051771150344179133c964f22e4231d" args="" -->
+<div class="memitem">
+<div class="memproto">
+      <table class="memname">
+        <tr>
+          <td class="memname">orxSTRING <a class="el" href="structorx_p_h_y_s_i_c_s___e_v_e_n_t___p_a_y_l_o_a_d.html#f051771150344179133c964f22e4231d">orxPHYSICS_EVENT_PAYLOAD::zSenderPartName</a>          </td>
+        </tr>
+      </table>
+</div>
+<div class="memdoc">
+
+<p>
+Sender part name : 28 
+</div>
+</div><p>
+<a class="anchor" name="7947afe96e33302bf75f6899ff026abe"></a><!-- doxytag: member="orxPHYSICS_EVENT_PAYLOAD::zRecipientPartName" ref="7947afe96e33302bf75f6899ff026abe" args="" -->
+<div class="memitem">
+<div class="memproto">
+      <table class="memname">
+        <tr>
+          <td class="memname">orxSTRING <a class="el" href="structorx_p_h_y_s_i_c_s___e_v_e_n_t___p_a_y_l_o_a_d.html#7947afe96e33302bf75f6899ff026abe">orxPHYSICS_EVENT_PAYLOAD::zRecipientPartName</a>          </td>
+        </tr>
+      </table>
+</div>
+<div class="memdoc">
+
+<p>
+Recipient part name : 32 
 </div>
 </div><p>
 <hr>The documentation for this struct was generated from the following file:<ul>
