@@ -125,6 +125,13 @@ extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_AddPartFromConfig(orxBODY 
  */
 extern orxDLLAPI orxPHYSICS_BODY_PART *orxFASTCALL orxBody_GetPart(const orxBODY *_pstBody, orxU32 _u32Index);
 
+/** Gets a body part name
+ * @param[in]   _pstBody        Concerned body
+ * @param[in]   _u32Index       Part index (should be less than orxBODY_KU32_DATA_MAX_NUMBER)
+ * @return      orxSTRING / orxNULL
+ */
+extern orxDLLAPI const orxSTRING orxFASTCALL  orxBody_GetPartName(orxBODY *_pstBody, orxU32 _u32Index);
+
 /** Removes a body part
  * @param[in]   _pstBody        Concerned body
  * @param[in]   _u32Index       Part index (should be less than orxBODY_KU32_DATA_MAX_NUMBER)
