@@ -15,6 +15,7 @@ orx 1.1 rc0
 * Dynamic objects can now have parents and get the cumulated result move from parents + physics simulation!
 * Physics simulation is back on main clock to provide a more robust game loop
 * Fixed FixedRotation property to use Box2D feature instead of orx's hacked one
+* Added names of both involved parts in contact events
 * Fixed orxFRAME child calculation when using anisotropic scale on parent
 * Fixed home render plugin camera rotation when the camera has a parent object
 * Removed AutoDelete property for spawners
